--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,85 @@
         </li>
       </ul>
     </section>
+
+<section class="faq-wrapper">
+  <h2 class="faq-toggle">Frequently Asked Questions</h2>
+
+    <div class="faq-section">
+  <div class="faq-item">
+    <button class="faq-question">1. How do I rent camping equipment?</button>
+    <div class="faq-answer">
+      <p>Browse our products, add items to your cart, and complete the checkout to reserve your equipment.</p>
+    </div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">2. Do you offer delivery?</button>
+    <div class="faq-answer">
+      <p>Yes, we deliver to most locations. Delivery fees depend on distance and order size.</p>
+    </div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">3. Can I pick up my order instead of delivery?</button>
+    <div class="faq-answer">
+      <p>Yes, you can choose free pick-up during checkout from any of our partner pickup centers.</p>
+    </div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">4. What payment methods do you accept?</button>
+    <div class="faq-answer">
+      <p>We accept debit cards, credit cards, PayPal, and other popular secure payment options.</p>
+    </div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">5. Can I cancel my order?</button>
+    <div class="faq-answer">
+      <p>Orders may be canceled within 2 hours of placing them. After that, cancellation fees may apply.</p>
+    </div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">6. Can I return an item?</button>
+    <div class="faq-answer">
+      <p>Returns are accepted within 48 hours if the item is unused and in good condition. Contact support for help.</p>
+    </div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">7. What if a product arrives damaged?</button>
+    <div class="faq-answer">
+      <p>If any item arrives damaged, we will replace it immediately at no extra cost.</p>
+    </div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">8. Are the tents and equipment cleaned?</button>
+    <div class="faq-answer">
+      <p>Yes — all items are fully cleaned, disinfected, and inspected after each rental.</p>
+    </div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">9. Do you offer discounts?</button>
+    <div class="faq-answer">
+      <p>We offer seasonal discounts, student rates, and bulk-order discounts for groups or events.</p>
+    </div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">10. How can I contact support?</button>
+    <div class="faq-answer">
+      <p>You can reach us anytime through our contact page or by email. Support responds within 24 hours.</p>
+    </div>
+  </div>
+<br>
+<br>
+</section>
+
+    
   </main>
   <footer id="main-footer"></footer>
 </body>
