--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,17 @@
         </li>
       </ul>
     </section>
+
+      <!-- Spinner overlay -->
+    <div class="spinner-overlay" id="spinnerOverlay">
+      <div class="spinner"></div>
+    </div>
+
+    <!-- Product container -->
+    <div class="product-container" id="productContainer">
+      <!-- Products will load dynamically -->
+    </div>
+    
   </main>
   <footer id="main-footer"></footer>
 </body>
