--- a/src/index.html
+++ b/src/index.html
@@ -59,15 +59,14 @@
     </section>
 
       <!-- Spinner overlay -->
-    <div class="spinner-overlay" id="spinnerOverlay">
-      <div class="spinner"></div>
-    </div>
+    <div id="spinner" class="spinner hidden"></div>
+
 
     <!-- Product container -->
-    <div class="product-container" id="productContainer">
+<div id="product-container"></div>
       <!-- Products will load dynamically -->
     </div>
-    
+
   </main>
   <footer id="main-footer"></footer>
 </body>
