--- a/src/index.html
+++ b/src/index.html
@@ -58,12 +58,13 @@
       </ul>
     </section>
 
-      <!-- Spinner overlay -->
-    <div id="spinner" class="spinner hidden"></div>
-
+       <!-- Spinner overlay -->
+    <div class="spinner-overlay" id="spinnerOverlay">
+      <div class="spinner"></div>
+    </div>
 
     <!-- Product container -->
-<div id="product-container"></div>
+    <div class="product-container" id="productContainer">
       <!-- Products will load dynamically -->
     </div>
 
