--- a/src/pages/lists.html
+++ b/src/pages/lists.html
@@ -38,7 +38,7 @@
   </footer>
 
   <script type="module">
-    import { getLists, createList, getListBooks, removeFromList } from './js/storage.js';
+    import { getLists, createList, getListBooks, removeFromList } from '../js/storage.js';
     import { createRatingStars } from './js/rating-stars.js';
 
     const container = document.getElementById('lists-container');
