--- a/src/pages/lists.html
+++ b/src/pages/lists.html
@@ -39,7 +39,7 @@
 
   <script type="module">
     import { getLists, createList, getListBooks, removeFromList } from '../js/storage.js';
-    import { createRatingStars } from './js/rating-stars.js';
+    import { createRatingStars } from '../js/rating-stars.js';
 
     const container = document.getElementById('lists-container');
     const empty = document.getElementById('empty-lists');
