--- a/src/pages/lists.html
+++ b/src/pages/lists.html
@@ -36,6 +36,7 @@
   <footer>
     <p>© 2025 Book Explorer   || ERNEST OHWOJEHERI</p>
   </footer>
+<script type="module" src="../js/lists.js"></script>
 
 </body>
 </html>
