--- a/src/pages/lists.html
+++ b/src/pages/lists.html
@@ -34,9 +34,10 @@
   </main>
 
   <footer>
-    <p>© 2025 Book Explorer   || ERNEST OHWOJEHERI</p>
+    <p>© 2025 Book Explorer || ERNEST OHWOJEHERI</p>
   </footer>
-<script type="module" src="../js/lists.js"></script>
 
+  <!-- Link to external lists.js -->
+  <script type="module" src="../js/lists.js"></script>
 </body>
 </html>
