--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,6 @@ Rate and track your reading journey as you go.
     <p>© 2025 Book Explorer    || ERNEST OHWOJEHERI </p>
   </footer>
 
-  <script type="module" src="/js/search-ui.js"></script>
+  <script type="module" src="./js/search-ui.js"></script>
 </body>
 </html>
